优化方法栈管理方式

--- a/Config.h.in
+++ b/Config.h.in
@@ -1,4 +1,4 @@
 #ifndef CONFIG_H
 #define CONFIG_H
-#define PIXOTRON_VM_STACK_SIZE (@PIXOTRON_VM_STACK_SIZE@)
+#define VM_MAX_STACK_DEPTH (@VM_MAX_STACK_DEPTH@)
 #endif
