--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.31)
 project(PixotronVM C)
 
 set(CMAKE_C_STANDARD 11)
-set(PIXOTRON_VM_STACK_SIZE "1024")
+set(VM_MAX_STACK_DEPTH "1024")
 
 configure_file(${PROJECT_SOURCE_DIR}/Config.h.in ${CMAKE_BINARY_DIR}/include/Config.h)
 
