--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
 project(PixotronVM C)
 
-set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 set(VM_MAX_STACK_DEPTH "1024")
 
 find_package(PkgConfig REQUIRED)
 
-pkg_search_module(GLIB REQUIRED glib-2.0)
-pkg_search_module(GIO REQUIRED gio-2.0)
+pkg_check_modules(GLIB_DEP REQUIRED glib-2.0 gobject-2.0 gio-2.0)
+
 
 configure_file(${PROJECT_SOURCE_DIR}/Config.h.in ${CMAKE_BINARY_DIR}/include/Config.h)
 
@@ -17,6 +17,16 @@ file(GLOB SOURCES *.c)
 enable_testing()
 
 add_subdirectory(tests)
-include_directories(AFTER "include" ${CMAKE_BINARY_DIR}/include ${GLIB_INCLUDE_DIRS} ${GIO_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
+
+target_link_libraries(${PROJECT_NAME} PUBLIC
+        ${GLIB_DEP_LIBRARIES}
+)
+
+
+target_include_directories(${PROJECT_NAME} PUBLIC
+        include
+        ${CMAKE_BINARY_DIR}/include
+        ${GLIB_DEP_INCLUDE_DIRS}
+)
