--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ pkg_check_modules(GLIB_DEP REQUIRED glib-2.0 gobject-2.0 gio-2.0)
 
 configure_file(${PROJECT_SOURCE_DIR}/Config.h.in ${CMAKE_BINARY_DIR}/include/Config.h)
 
-file(GLOB SOURCES *.c)
+file(GLOB SOURCES *.c lib/*.c)
 
 enable_testing()
 
@@ -27,6 +27,7 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
 
 target_include_directories(${PROJECT_NAME} PUBLIC
         include
+        include/api
         ${CMAKE_BINARY_DIR}/include
         ${GLIB_DEP_INCLUDE_DIRS}
 )
