refactor(vm): 重构虚拟机并添加性能测试
- 修改 assembler 测试配置，更新工作目录和输出目录路径
- 在 CMakeLists.txt 中添加 example/build 目录的复制操作
- 优化 Engine.c 中的异常处理和堆栈操作
- 更新 FFI.c 和 FFI.h，调整参数类型和返回值
- 移除 HelloWorld.s 示例文件
- 更新 Klass.c 中的错误处理和方法查找逻辑
- 修改 Opcode.java 和 Parser.java，将 SBC指令改为 SUB
- 优化 Stack.c 中的堆栈帧移动操作
- 更新 System.c 和 System.s，添加 VM_PrintNanoDiff函数
- 重构 Test.c，添加 testMathMax 函数进行性能测试
- 新增 TMath.s 示例文件，用于测试 Math.Max 方法
- 更新 VM.c 和 VM.h，调整 LaunchVM 函数参数以支持方法名

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ pkg_check_modules(GLIB_DEP REQUIRED glib-2.0 gobject-2.0 gio-2.0)
 configure_file(${PROJECT_SOURCE_DIR}/Config.h.in ${CMAKE_BINARY_DIR}/include/Config.h)
 
 file(GLOB SOURCES *.c lib/*.c)
+file(COPY example/build DESTINATION ${CMAKE_BINARY_DIR}/tests)
+
 
 enable_testing()
 
