--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(VM_MAX_STACK_DEPTH "1024")
 
+find_program(Python_EXECUTABLE python NO_CMAKE_FIND_ROOT_PATH REQUIRED)
+
 find_package(PkgConfig REQUIRED)
 
 pkg_check_modules(GLIB_DEP REQUIRED glib-2.0 gobject-2.0 gio-2.0)
@@ -26,10 +28,12 @@ add_subdirectory(tests)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
-if (APPLE)
-    target_link_directories(${PROJECT_NAME} PUBLIC ${GLIB_DEP_LIBRARY_DIRS})
-endif ()
+execute_process(COMMAND ${Python_EXECUTABLE}
+        ${CMAKE_SOURCE_DIR}/op_gen.py
+        ${CMAKE_SOURCE_DIR}/include/engine ERROR_QUIET
+)
 
+target_link_directories(${PROJECT_NAME} PUBLIC ${GLIB_DEP_LIBRARY_DIRS})
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
         ${GLIB_DEP_LIBRARIES}
