refactor(engine.c, helper.c, lib/system.c, lib/Math.s): 优化方法调用及参数处理
移除了不必要的返回值处理，改进了外部函数接口的调用方式，并简化了一些系统库的方法定义。同时更新了数学库中的函数声明格式。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ endif ()
 
 find_package(PkgConfig REQUIRED)
 
+pkg_check_modules(FFI libffi REQUIRED)
 pkg_check_modules(GLIB_DEP REQUIRED glib-2.0 gobject-2.0 gio-2.0)
 
 
@@ -41,16 +42,21 @@ execute_process(COMMAND ${Python_EXECUTABLE}
         ${CMAKE_SOURCE_DIR}/include/engine ERROR_QUIET
 )
 
-target_link_directories(${PROJECT_NAME} PUBLIC ${GLIB_DEP_LIBRARY_DIRS})
+target_link_directories(${PROJECT_NAME} PUBLIC
+        ${GLIB_DEP_LIBRARY_DIRS}
+        ${FFI_LIBDIR}
+)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
         ${GLIB_DEP_LIBRARIES}
+        ffi
 )
 
 
 target_include_directories(${PROJECT_NAME} PUBLIC
         include/engine
         include/api
+        ${FFI_INCLUDE_DIRS}
         ${CMAKE_BINARY_DIR}/include
         ${GLIB_DEP_INCLUDE_DIRS}
 )
