--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(PixotronVM C)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(VM_MAX_STACK_DEPTH "1024")
+set(VM_DEBUG_ENABLE "0")
+set(VM_MAX_STACK_DEPTH "2048")
 
 find_program(Python_EXECUTABLE python NO_CMAKE_FIND_ROOT_PATH)
 # if python can't find try find python3
