refactor: 优化代码结构和类型定义
- 修改 pvm_bytecode_read_u32 函数返回类型为 uint32_t
- 更新 config.h 中 VM_DEBUG_ENABLE定义
- 将 pvm_cmp、pvm_conv、pvm_store 和 pvm_load_klass函数改为 static inline
- 优化 PixtronVM_MethodToString 函数定义
- 更新 vm.c 中的调试模式判断条件

--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,5 @@
 #ifndef CONFIG_H
 #define CONFIG_H
 #define VM_MAX_STACK_DEPTH (@VM_MAX_STACK_DEPTH@)
-#define VM_DEBUG_ENABLE (1)
+#define VM_DEBUG_ENABLE (@VM_DEBUG_ENABLE@)
 #endif
