feat(engine): 重构虚拟机栈结构和内存管理
- 修改 CMakeLists.txt 和 config.h.in，更新栈大小配置
- 重构 engine.c 中的 RuntimeContext 结构和堆栈操作
- 更新 itype.h 中的虚拟栈帧和运行时上下文定义
-优化 memory.c 和 memory.h 中的内存分配函数
- 重写 stack.c 中的栈帧推送和弹出逻辑
- 更新 lib/system.c 中的时间获取函数
-调整 example/TBaseline.s 中的示例代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(PixotronVM C)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(VM_DEBUG_ENABLE "0")
-set(VM_MAX_STACK_DEPTH "2048")
+set(VM_STACK_SIZE "1024*1024")
 
 find_program(Python_EXECUTABLE python NO_CMAKE_FIND_ROOT_PATH)
 # if python can't find try find python3
