feat(engine): 添加抛出异常的功能并支持文件名
- 新增 THROW 指令用于抛出异常
- 在 BinaryHeader 中添加文件名信息
- 修改 ASTBuilder 和 Parser 以支持文件名定义
- 更新 pcore.c 中的异常处理逻辑
- 增加新的测试用例 Throw.s

--- a/config.h.in
+++ b/config.h.in
@@ -2,4 +2,5 @@
 #define CONFIG_H
 #define VM_STACK_SIZE (@VM_STACK_SIZE@)
 #define VM_DEBUG_ENABLE (@VM_DEBUG_ENABLE@)
+#define VM_EXCEPT_STACK_DEPTH (@VM_EXCEPT_STACK_DEPTH@)
 #endif
