--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(PixotronVM C)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(VM_DEBUG_ENABLE "0")
+set(VM_DEBUG_ENABLE "1")
 set(VM_STACK_SIZE "1024*1024")
 set(VM_EXCEPT_STACK_DEPTH "30")
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -flto -O3")
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -flto -O2")
 
 find_program(Python_EXECUTABLE python NO_CMAKE_FIND_ROOT_PATH)
 # if python can't find try find python3
@@ -37,6 +37,7 @@ endif ()
 
 enable_testing()
 
+add_subdirectory(pva)
 add_subdirectory(tests)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
