feat(pva): 添加 PVA_window_show 函数并更新相关功能- 在 PVAudio.s 和 pvaudio.h 中添加 PVA_window_show 函数 - 实现 PVA_window_show 函数，用于显示窗口 - 更新 CMakeLists.txt，调整库和测试的编译配置 - 修改 phandle.c 和 phelper.c，优化句柄和辅助函数 - 更新 pklass.c 和 pobj.c，改进类和对象的初始化 - 添加示例 Pixel.s，演示 PVA_window_show 的使用

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
 project(PixotronVM C)
 
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(VM_DEBUG_ENABLE "1")
 set(VM_STACK_SIZE "1024*1024")
 set(VM_EXCEPT_STACK_DEPTH "30")
+
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -flto -O2")
 
@@ -31,16 +36,11 @@ file(GLOB SOURCES *.c lib/*.c)
 
 
 if (EXISTS ${CMAKE_SOURCE_DIR}/example/build)
-    file(COPY ${CMAKE_SOURCE_DIR}/example/build DESTINATION ${CMAKE_BINARY_DIR}/tests)
+    file(COPY ${CMAKE_SOURCE_DIR}/example/build DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 endif ()
 
-
-enable_testing()
-
-add_subdirectory(pva)
-add_subdirectory(tests)
-
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
+
 
 execute_process(COMMAND ${Python_EXECUTABLE}
         ${CMAKE_SOURCE_DIR}/op_gen.py
@@ -65,3 +65,8 @@ target_include_directories(${PROJECT_NAME} PUBLIC
         ${CMAKE_BINARY_DIR}/include
         ${GLIB_DEP_INCLUDE_DIRS}
 )
+
+enable_testing()
+
+add_subdirectory(pva)
+add_subdirectory(tests)
