feat(core): 优化类型处理和接口定义
- 调整类型枚举和名称映射，增加 HANDLE 类型
- 优化字符串和事件处理相关代码
- 更新 PVAudio 接口和实现
- 修复部分代码逻辑和拼写错误

--- a/pva/CMakeLists.txt
+++ b/pva/CMakeLists.txt
@@ -5,4 +5,4 @@ pkg_check_modules(SDL sdl3 REQUIRED)
 add_library(PVAudio SHARED ${PVA_SOURCE})
 
 target_link_libraries(PVAudio PUBLIC ${SDL_LINK_LIBRARIES})
-target_include_directories(PVAudio SYSTEM AFTER PRIVATE ${SDL_INCLUDEDIR} api)
+target_include_directories(PVAudio SYSTEM AFTER PRIVATE ${SDL_INCLUDEDIR} api ${CMAKE_SOURCE_DIR}/include/api)
