refactor: 移除 PVAudio 模块并更新相关代码
- 删除了 PVAudio相关的源代码和头文件
- 更新了 CMakeLists.txt 文件，移除了 PVAudio 的编译和链接
- 修改了 tests 目录下的测试代码，删除了与 PVAudio 相关的测试
- 更新了 pvm.c 中的错误处理，使用 EXIT_FAILURE 替代 -1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(VM_DEBUG_ENABLE "1")
+set(VM_DEBUG_ENABLE "0")
 set(VM_STACK_SIZE "1024*1024")
 set(VM_EXCEPT_STACK_DEPTH "30")
 
 
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -flto -O2")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -flto -O2")
 
 find_program(Python_EXECUTABLE python NO_CMAKE_FIND_ROOT_PATH)
 # if python can't find try find python3
@@ -68,5 +68,4 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 
 enable_testing()
 
-add_subdirectory(pva)
 add_subdirectory(tests)
